SDGF-208 Remove server configuration